@@ -116,7 +116,7 @@ WebDriverManager exposes its API by means of the **builder pattern**. This means
 |-----------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | ``version()``                                             | By default, WebDriverManager tries to download the latest version of a given driver binary. A concrete version can be specified using this method.                                                                                                                                                                                                              | ``wdm.chromeDriverVersion``, ``wdm.operaDriverVersion``, ``wdm.internetExplorerVersion``, ``wdm.edgeVersion``, ``wdm.phantomjsDriverVersion``, ``wdm.geckoDriverVersion`` |
 | ``forceCache()``                                          | By default, WebDriverManager connects to the specific driver repository URL to find out what is the latest version of the binary. This can be avoided forcing to use the latest version form the local repository.                                                                                                                                              | ``wdm.forceCache``=true                                                                                                                                                   |
-| ``forceOperativeSystem(OperativeSystem operativeSystem)`` | By default, WebDriverManager downloads the binary for the same operative systems than the machine running the test. This can be changed using this method (accepted values: ``WIN``, ``LINUX``, ``MAC``.                                                                                                                                                        | TODO                                                                                                                                                                      |
+| ``forceOperativeSystem(OperativeSystem operativeSystem)`` | By default, WebDriverManager downloads the binary for the same operative systems than the machine running the test. This can be changed using this method (accepted values: ``WIN``, ``LINUX``, ``MAC``.)                                                                                                                                                       | ``wdm.forceOs``=WIN, ``wdm.forceOs``=LINUX, ``wdm.forceOs``=MAC                                                                                                           |
 | ``forceDownload()``                                       | By default, WebDriverManager finds out the latest version of the binary, and then it uses the cached version if exists. This option forces to download again the binary even if it has been previously cached.                                                                                                                                                  | ``wdm.override``=true                                                                                                                                                     |
 | ``architecture(Architecture arch)``                       | By default, WebDriverManager would try to use the proper binary for the platform running the test case (i.e. 32-bit or 64-bit). This behavior can be changed by forcing a given architecture: 32-bits (``Architecture.x32``) or 64-bits (``Architecture.x64``);                                                                                                 | ``wdm.architecture``                                                                                                                                                      |
 | ``useBetaVersions()``                                     | By default, WebDriverManager skip beta versions. With this method, WebDriverManager will download also beta versions.                                                                                                                                                                                                                                           | ``wdm.useBetaVersions``=true                                                                                                                                              |
